--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,7 @@ services:
     command: npm run dev
     volumes:
       - .:/app
+      - /app/generated/prisma_client
       - /app/node_modules
       - /app/.next
     ports:
